k8s/postgres_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-postgres
spec:
  type: ClusterIP
  selector:
    app: demo-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
